--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+DUBLIN_OFFICE_LONGITUTE=-6.2535495
+DUBLIN_OFFICE_LATITUDE=53.3340285
+FILE_LOCATION = '/storage/app/affiliates.txt'
